<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Task Management System</string>
    <string name="select_task_status">Select task status</string>
    <string name="select_task_priority">Select task priority</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="enter_task_details">Enter Task Details</string>
    <string name="task_status">Task Status</string>
    <string name="task_priority">Task Priority</string>
    <string name="choose_due_date">Choose Due Date</string>
    <string name="save_task">Save Task</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="confirm_delete">Are you sure you want to delete this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>


</resources>